Bug 334386. Repeating DHTML accessibility alerts not being spoken. r=ginn.chen, sr=bz